# Prathamesh-Ghatole.github.io

./: .gitignore  .gitmodules  404.html  CNAME  README.md  _config.yml  base.html  config.toml  index.html  index.md  index.xml  pyproject.toml  sitemap.xml  styles.css.map
.github/workflows/: gh-pages.yml
categories/: index.html  index.xml
content/: _index.md  index.md
content/achievements/: gsoc-twice.md  hackathon-winner-2023.md  ieee-leadership.md  open-source-contributor.md  speaking-impact.md  tech-talk-speaker.md
content/education/: aws-solutions-architect.md  bs-computer-science.md  ghrcem-btech-ai.md  iitm-bs-data-science.md
content/experience/: 2020-startup-inc.md  2022-gsoc-metabrainz.md  2022-tech-corp.md  2023-gsoc-metabrainz.md  2023-new-engen.md  2024-gekko.md
content/pages/: index.md
content/projects/: entityxtract.md  findash-ai.md  freelance-proprietary.md  portfolio.md  stock_exchange_intelligence_engine.md  zentask.md
content/stack/: 1_applied-ai.md  2_data-engineering.md  3_languages-tools.md  4_cloud-devops.md  applied-ai.md  backend.md  cloud-devops.md  data-analytics.md  data-engineering.md  emerging-tech.md  interface-engineering.md  languages-tools.md  system-architecture.md
content/writing/: ai-revolution.md  gsoc-101.md  gsoc-2022-cleaning-dataset.md  (+2 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
public/: index.html  index.xml  main.min.css
scripts/: dev_server.py  generate_site.py
tags/: index.html  index.xml
templates/: layout.html
(+15 files in other folders)
